hphp/hack/test/typecheck/test_or.php.exp
File "test_or.php", line 19, characters 7-21:
Invalid argument (Typing[4110])
File "test_or.php", line 12, characters 14-14:
Expected C
File "test_or.php", line 19, characters 7-21:
But got bool because this is the result of a logical operation
