hphp/hack/test/typecheck/test_or.php
<?hh
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the BSD-style license found in the
 * LICENSE file in the "hack" directory of this source tree. An additional grant
 * of patent rights can be found in the PATENTS file in the same directory.
 *
 */

function bar(C $x): void {}

class C {
  public function foo(): void {}
}

function f(?C $x): void {
  bar($x || (new C()));
}
